# resume-generator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  resume.html  resume.xml
examples/: resume.css  templates.xml  vince_resume.xml
include/: CMakeLists.txt  common.h  custom_tag.h  html_generator.cpp  processor.cpp  processor.h  resume.cpp  resume.h  resume_parser.cpp  text.cpp  text.h  xml_node.cpp  xml_node.h
include/internal/: CMakeLists.txt  common.h  custom_tag.h  html_generator.cpp  html_node.h  processor.cpp  processor.h  resume.cpp  resume.h  text.h  xml_node.h
tests/: CMakeLists.txt  test_custom_xml_processor.cpp  test_text.cpp
